more fixes
added documentation
fixed nodetool help output tests
added status command
introduced binary download of files in fetch command if necessary
hardened code
ability to specify duration in human format (e.g. 5m)
improved error parsing
ability to execute purge, list and fetch even with disabled profiler
async-profiler is disabled by default
added nodetool tests
add startup check checking kernel parameters